# data-layer-manager

./: .bumpversion.toml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.agent/: gsd-file-manifest.json
.agent/agents/: gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-ui-auditor.md  gsd-ui-checker.md  gsd-ui-researcher.md  gsd-verifier.md
.agent/rules/: AI_COMMIT_POLICY.md
.agent/skills/changelog-update/: SKILL.md
apps/mcp/src/: main.py
apps/mcp/src/tools/: ingest.py  search.py
apps/worker/: main.py
config/: settings.dev.yaml  settings.yaml
data_layer_manager/application/: factories.py
data_layer_manager/application/auth/: security.py
data_layer_manager/application/ingestion/: parser_registry.py  service.py
data_layer_manager/application/ingestion/chunkers/: factory.py  fixed_chunker.py
data_layer_manager/application/retrieval/: service.py
data_layer_manager/core/: config.py
data_layer_manager/domain/entities/: __init__.py  chunk.py  document.py
data_layer_manager/domain/interfaces/: chunker.py  embeddings.py  graph_store.py  parser.py  retrieval.py  vector_store.py
data_layer_manager/domain/schemas/: parsed_chunk.py  parsed_document.py  retrieval_filter.py  scored_chunk.py  strategy.py
data_layer_manager/infrastructure/: config.py
data_layer_manager/infrastructure/embeddings/: hf_engine.py  openai_engine.py
data_layer_manager/infrastructure/graphstores/: factory.py  neo4j.py
data_layer_manager/infrastructure/parsers/: html_parser.py  markdown_parser.py  text_parser.py
data_layer_manager/infrastructure/persistence/: database.py  document_repository.py  models.py
data_layer_manager/infrastructure/persistence/migrations/: env.py
data_layer_manager/infrastructure/persistence/models/: __init__.py  base.py  chunk.py  document.py
data_layer_manager/infrastructure/persistence/repositories/: __init__.py  document.py
data_layer_manager/infrastructure/vectorstores/: factory.py
data_layer_manager/interfaces/api/: app.py  schemas.py
data_layer_manager/interfaces/mcp/: server.py
docs/: TECHNICAL_DOCUMENTATION.md
docs/architecture/: ARCHITECTURE.md  celery_tasks.md  overview.md
docs/architecture/decisions/: 0001-library-first.md  0002-modular-monolith.md  0003-vector-store-strategy.md
docs/operations/: local_dev.md  quality_policy.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
scripts/: seed_sample.py  verify_fix.py
tests/integration/: test_hybrid_retrieval.py  test_ingestion_service.py  test_mcp_server.py  test_neo4j_store.py  test_qdrant_store.py  test_sample_data.py  test_semantic_search_real.py  test_vector_retrieval.py
tests/unit/: test_chunker_factory.py  test_embedding_engine.py  test_fixed_chunker.py  test_parser_registry.py  test_parsers.py
(+13 files in other folders)
