[project]
name = "data-layer-manager"
version = "0.0.5"
description = "Reusable Data Layer for AI Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "qdrant-client>=1.5.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "PyMuPDF>=1.22.0",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.0",
    "markdown>=3.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "neo4j>=5.10.0",
    "bs4>=0.0.2",
    "trafilatura>=2.0.0",
    "pyyaml>=6.0.0",
    "torch>=2.11.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
    "pre-commit>=4.5.1",
    "faker>=19.0.0",
    "bump-my-version>=0.10.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "U"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "qdrant-client>=1.17.1",
    "testcontainers[neo4j,qdrant]>=4.14.2",
    "types-pyyaml>=6.0.12.20250915",
]
